package dist_storage;

option cc_generic_services = true; 

enum NSCode {
     NS_SUC = 0;
     NS_ERR = 1;
}

enum NodeAction {
    Reg = 0;
    UnReg = 1;
    Beat = 2;
    NUL = 3;
} 

// HBRequest HBResponse is used by heartbeat 
message HBRequest {
    optional string host = 1 [default = ""];
    optional NodeAction action = 2 [default = NUL];
    optional int64 updated_time = 3 [default = 0];
    // in KB!
    optional int64 disk_space = 4 [default = 0];
    optional int64 mem_space = 5 [default = 0];
    optional int64 visit_flow = 6 [default = 0];
}

message HBResponse {
    optional NSCode code = 1 [default = NS_SUC];
}

// Bucket, CNSRequest, CNSResponse is used to make client get dist node list 
message Bucket {
    required uint64 number = 1;
    repeated string node_list = 2;  
}

message CNSRequest {
    //optional bool is_suc = 1 [default = false];
    optional string dist_alg = 1 [default = "ketama"];
}

message CNSResponse {
    optional bool ret_code = 1 [default = false];
    repeated Bucket bucket_list = 2; 
}


service NameService {
    rpc HeartBeat(HBRequest) returns (HBResponse);
    rpc GetBuketList(CNSRequest) returns (CNSResponse);
}
